# fast_training

./: .gitignore  README.md  pyproject.toml
fast_training/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_training/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 330edc381b1e_adicionado_campo_updated_at.py  61bbc82db070_deletando_o_campo_updated_at.py  6a53d8ad5dd8_criate_todo_table.py  b77f6b2d0d6b_criando_tabelas_de_usuarios.py
tests/: conftest.py  test_app.py  test_auth.py  test_database.py  test_security.py  test_todos.py  test_users.py
